# network-interconnect-tester-cores

./: CHANGELOG  COPYRIGHT  README  README.md  build.sh
lib/hw/lsi/cores/common/hdl/: ethernet_crc_8.v
lib/hw/lsi/cores/common/sim/: axi.v  run.sh  tb.v
lib/hw/lsi/cores/filter_gmii/: Makefile  filter_gmii.tcl
lib/hw/lsi/cores/filter_gmii/hdl/: filter_gmii.v  filter_gmii_cpu_regs.v  filter_gmii_cpu_regs_defines.v
lib/hw/lsi/cores/gig_ethernet_pcs_pma_shared/: Makefile  README  gig_ethernet_pcs_pma_shared.tcl
lib/hw/lsi/cores/gig_ethernet_pcs_pma_shared/hdl/: gig_ethernet_pcs_pma_clock_reset.vhd  gig_ethernet_pcs_pma_clock_reset.vhd.patch  gig_ethernet_pcs_pma_reset_sync_ex.v  gig_ethernet_pcs_pma_shared.v
lib/hw/lsi/cores/gig_ethernet_pcs_pma_shared/sim/: tb.v
lib/hw/lsi/cores/gmii_mux/: Makefile  gmii_mux.tcl
lib/hw/lsi/cores/gmii_mux/hdl/: gmii_mux.v  gmii_mux_cpu_regs.v  gmii_mux_cpu_regs_defines.v
lib/hw/lsi/cores/rtclock/: Makefile  rtclock.tcl
lib/hw/lsi/cores/rtclock/hdl/: rtclock.v  rtclock_cpu_regs.v  rtclock_cpu_regs_defines.v
lib/hw/lsi/cores/rtclock/sim/: Makefile.am  Makefile.cocotb  axi.v  flip_register.py  flip_register.v  run-rtclock.sh  tb.v  tb_pps.v  test-flip-register-cocotb  test-flip-register-verilog  test-my-design-cocotb  test-pps  test_my_design.py
lib/hw/lsi/cores/traffic_analyzer_gmii/: Makefile  README  traffic_analyzer_gmii.tcl
lib/hw/lsi/cores/traffic_analyzer_gmii/hdl/: bram_io.v  ethernet_crc_8.v  ethernet_crc_8_check.v  testframe_parser.v  traffic_analyzer_gmii.v  traffic_analyzer_gmii_cpu_regs.v  traffic_analyzer_gmii_cpu_regs_defines.v
lib/hw/lsi/cores/traffic_analyzer_gmii/sim/: Makefile.am  Makefile.cocotb  config2regs  frame.mem  run-burst.sh  run-rtclock.sh  run.sh  tb-burst.v  tb-rtclock.v  tb.v  tester_loop.py  tester_loop.v  testframe.mem
lib/hw/lsi/cores/traffic_generator/: Makefile  traffic_generator.tcl
lib/hw/lsi/cores/traffic_generator/hdl/: traffic_generator.v  traffic_generator_cpu_regs.v  traffic_generator_cpu_regs_defines.v
lib/hw/lsi/cores/traffic_generator_gmii/: Makefile  traffic_generator_gmii.tcl
lib/hw/lsi/cores/traffic_generator_gmii/hdl/: bram_io.v  traffic_generator_gmii.v  traffic_generator_gmii_cpu_regs.v  traffic_generator_gmii_cpu_regs_defines.v
lib/sw/lsi/: Makefile.am  configure.ac
lib/sw/lsi/common/: Makefile.am  devmem-map.c  devmem-map.h  devmem32.c  get-core-offset  hexstr.c  hexstr.h  ioreg.c  ioreg.h  sim-devmem32  sim-devmem32.c  sim-finish.c  sim-ioreg.c  sim-run.c
lib/sw/lsi/common/simulation/: Makefile.am  get-core-offset
lib/sw/lsi/cores/gmii-mux/: Makefile.am
lib/sw/lsi/cores/gmii_mux/: Makefile.am  gmii-mux-tool
lib/sw/lsi/cores/gnss-clock/: Makefile.am  gnss-clock-config  lsi-gnss-clock.c  lsi-gnss-clock.yang
lib/sw/lsi/cores/loopback/: Makefile.am  README  loopback.c
lib/sw/lsi/cores/power-distribution-unit/: Makefile.am  lsi-power-distribution-unit.c  lsi-power-distribution-unit.yang  power-distribution-unit
lib/sw/lsi/cores/rtclock/: Makefile.am  rtclock-clk-sel-external  rtclock-pps-correction  rtclock-pps-sync
lib/sw/lsi/cores/traffic-analyzer-gmii/: Makefile.am  traffic-analyzer  traffic-analyzer-gmii.c
lib/sw/lsi/cores/traffic-generator-gmii/: Makefile.am  traffic-generator  traffic-generator-gmii.c  traffic-generator-gmii.sh
systems/ethernet96/: Makefile  README  build-axi-eth.tcl  design_1-axi-eth.tcl
systems/ethernet96/petalinux/: build-petalinux
systems/ethernet96/sim/: tb.v
systems/simulation/: Makefile.cocotb  README.md  config.xml  nc-session-tester0-in  nc-session-tester0-in.ts  nc-session-tester0-out  nc-session-tester0-out.ts  results.xml  rfc2544-benchmark  rfc2544-benchmark-report.txt  run-netconfd.sh  run-rfc2544-benchmark.sh  run.sh  tester_loop.py  tester_loop.v
systems/simulation/sim_build/: cocotb_iverilog_dump.v  sim.vvp  tester_loop.fst
systems/spark/: Makefile  README  bitstream.tcl  build.tcl  design.tcl  simulate.tcl  spark.xdc
systems/spark/petalinux/: build-fsbl.sh  build-petalinux  platform-auto.h  platform-auto.h.original  update-petalinux  xfsbl_hooks.c
systems/spark/petalinux/scripts/: build-kernel.sh  build-u-boot.sh
systems/spark/petalinux/src/common/project-spec/configs/: config_common.append  rootfs_config_common.append
systems/spark/petalinux/src/common/project-spec/meta-user/conf/: user-rootfsconfig
systems/spark/petalinux/src/common/project-spec/meta-user/recipes-bsp/u-boot/: u-boot-xlnx_%.bbappend
systems/spark/petalinux/src/common/project-spec/meta-user/recipes-bsp/u-boot/files/: platform-auto.patch
systems/spark/petalinux/src/common/project-spec/meta-user/recipes-kernel/linux/: linux-xlnx_%.bbappend
systems/spark/petalinux/src/v1/project-spec/meta-user/recipes-bsp/pmu-firmware/: pmu-firmware_%.bbappend
systems/spark/petalinux/src/v2/project-spec/configs/: rootfs_config.append
systems/spark/petalinux/src/v2/project-spec/meta-user/recipes-bsp/pmu-firmware/: pmu-firmware_%.bbappend
systems/spark/petalinux/src/v2/project-spec/meta-user/recipes-kernel/linux/: linux-xlnx_%.bbappend
systems/spark/sim/: tb.v
(+6 files in other folders)
